--- a/Client/client/src/mainPage/css.css
+++ b/Client/client/src/mainPage/css.css
@@ -13,3 +13,14 @@
     padding: 0 30px 0 68px;
     position: relative;
   }
+
+  .wrap-input100 {
+    position: relative;
+    width: 100%;
+    z-index: 1;
+    margin-bottom: 10px;
+  }
+
+  .validate-input {
+    position: relative;
+  }
