--- a/Client/client/src/mainPage/css.css
+++ b/Client/client/src/mainPage/css.css
@@ -12,6 +12,7 @@
     border-radius: 25px;
     padding: 0 30px 0 68px;
     position: relative;
+    margin: 20px;
   }
 
   .wrap-input100 {
@@ -24,3 +25,27 @@
   .validate-input {
     position: relative;
   }
+
+  .Item {
+    margin : 20px;
+    padding: 20
+  }
+
+  .name {
+    font-weight: 600;
+    font-family: Calibri;
+    font-size: medium;
+  }
+
+  .soustitre {
+    font-weight: 200;
+    color: #666666;
+    font-family: Calibri;
+    font-size: small;
+  }
+
+.avatar {
+  width: 35px;
+  height: 35px;
+  margin-right: 10px;
+}
