--- a/Client/client/src/Components/Presentationals/search.css
+++ b/Client/client/src/Components/Presentationals/search.css
@@ -27,7 +27,7 @@
 }
 
 .search-icon{
-    background: url(../assets/search.svg);
+    background: url(../../assets/search.svg);
     background-size: 100%;
     height: 30px;
     width: 30px;
