--- a/Client/client/src/Components/Presentationals/search.css
+++ b/Client/client/src/Components/Presentationals/search.css
@@ -12,23 +12,27 @@
 
 .search-input-container{
     height: 100%;
-    width: 70%;
+    width: 90%;
     border-radius: 30px;
-    padding: 0 30px;
+    padding: 0 20px;
     border: .5px solid black;
+    background-color: white;
 }
 .search-input{
     position: relative;
     top: 50%;
+    width: 100%;
     transform: translateY(-50%);
     border: none;
     outline: none;
     background-color: var(--bg-color);
+    background-color: transparent;
 }
 
 .search-icon{
-    background: url(../../assets/search.svg);
-    background-size: 100%;
+    background: url(../assets/search.svg);
+    background-repeat: no-repeat;
+    background-size: 100;
     height: 30px;
     width: 30px;
     margin: 0 10px;
