--- a/Client/client/src/Components/Presentationals/search.css
+++ b/Client/client/src/Components/Presentationals/search.css
@@ -30,7 +30,7 @@
 }
 
 .search-icon{
-    background: url(../assets/search.svg);
+    background: url(../../assets/search.svg);
     background-repeat: no-repeat;
     background-size: 100;
     height: 30px;
