--- a/Client/client/src/pages/home.css
+++ b/Client/client/src/pages/home.css
@@ -5,6 +5,11 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    padding: 0;
+    margin: 0 auto;
+    max-width: 2400px;
+    min-width: 700px;
+    max-height: 1400px;
 }
 
 .page-content{
