--- a/Client/client/src/Components/Presentationals/Form-Items/select.css
+++ b/Client/client/src/Components/Presentationals/Form-Items/select.css
@@ -1,5 +1,5 @@
 .select{
-    padding: 15px 0;
+    padding: 10px 0;
     width: 100%;
 }
 
@@ -18,5 +18,5 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border: 1px grey solid;
-    border-right: .2px grey solid;
+    outline: none;
 }
