--- a/Client/client/src/Components/Presentationals/Form-Items/text-field.css
+++ b/Client/client/src/Components/Presentationals/Form-Items/text-field.css
@@ -10,7 +10,7 @@ input[type=number] {
 }
 .text-field{
     width: 100%;
-    padding: 15px 0;
+    padding: 10px 0;
 }
 
 .text-field-title{
@@ -32,6 +32,7 @@ input[type=number] {
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     padding:7px 15px;
+    outline: none;
 }
 
 .text-field-input:hover, .text-field-input:focus{
