--- a/Client/client/src/Components/Presentationals/page-view.css
+++ b/Client/client/src/Components/Presentationals/page-view.css
@@ -10,4 +10,8 @@
     height: 100%;
     width: 100%;
     transition: ease-in all .3s;
+    -webkit-transition: ease-in all .3s;
+    -moz-transition: ease-in all .3s;
+    -ms-transition: ease-in all .3s;
+    -o-transition: ease-in all .3s;
 }
