Added the add-malade button

--- a/Client/client/src/Components/Presentationals/Buttons/button.css
+++ b/Client/client/src/Components/Presentationals/Buttons/button.css
@@ -1,4 +1,4 @@
-@import '../../Base.css';
+@import '../../../Base.css';
 
 .my-button{
     width:90%;
@@ -20,6 +20,14 @@
     -moz-transition: all ease-in .5s;
     -ms-transition: all ease-in .5s;
     -o-transition: all ease-in .5s;
+}
+
+.my-button:hover{
+    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+    -moz-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    -o-transform: scale(1.05);
 }
 
 
