--- a/Client/client/src/Components/Presentationals/Dialogs/rdv-dialog.css
+++ b/Client/client/src/Components/Presentationals/Dialogs/rdv-dialog.css
@@ -3,6 +3,7 @@
 .rdv-dialog{
     height: 100%;
     width: 100%;
+    padding: 20px 0;
 }
 .rdv-dialog > div{
     height: 100%;
@@ -29,4 +30,65 @@
     -moz-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     -o-transform: translate(-50%,-50%);
+}
+
+.separation-line2{
+    border: 1px var(--primary-color) solid;
+    margin-top: 20px;
+}
+
+.left-part{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.rdv-list{
+    padding: 30px 20px;
+    max-height: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+
+.rdv-list > span{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loading{
+    width: 40px;
+    height: 40px;
+    background-color: transparent;
+    border-top: 1px var(--primary-color) solid;
+    border-left: 1px var(--primary-color) solid;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    animation-name: rotating;
+    animation-duration: .5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotating{
+    0%{
+        transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -ms-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -ms-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+}
 }
