--- a/Client/client/src/Base.css
+++ b/Client/client/src/Base.css
@@ -9,3 +9,27 @@ body{
     margin: 0;
     background-color: var(--bg-color);
 }
+
+.load{
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    border-top: var(--secondary-color) 1px solid;
+    border-left: var(--secondary-color) 1px solid;
+    animation-name: rotation;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes rotation{
+    0%{
+        transform: translate(-50%,-50%);
+    }
+    100%{
+        transform: translate(-50%,-50%) rotate(360deg) ;
+    }
+}
