--- a/Client/client/src/Components/Presentationals/rdvs-list.css
+++ b/Client/client/src/Components/Presentationals/rdvs-list.css
@@ -17,7 +17,7 @@
     overflow: hidden;
 }
 .rdvs-list > div{
-    height: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
 }
