--- a/Client/client/src/Components/Presentationals/rdvs-list.css
+++ b/Client/client/src/Components/Presentationals/rdvs-list.css
@@ -17,7 +17,7 @@
     overflow: hidden;
 }
 .rdvs-list > div{
-    max-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
 }
@@ -26,8 +26,8 @@
 }
 
 .rdv-header{
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .rdv-header > .rdv-header-title{
@@ -72,6 +72,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .rdvs-list-content{
     position: relative;
     height: 100%;
+    /* max-height: 100%; */
     overflow-y: scroll;
     scrollbar-width: none;
 }
