Started working on the stats page

--- a/Client/client/src/Base.css
+++ b/Client/client/src/Base.css
@@ -2,6 +2,10 @@
     --primary-color: #72c3e1;
     --secondary-color: #779da1;
     --bg-color: #F1f1f1;
+    --red:#bd1320;
+    --yellow:#feed01;
+    --blue:#009de0;
+    --orange:#f29400;
 }
 
 body{
