DEV : Adding the front and Server Work of Changer MDP

--- a/Client/client/src/Components/Presentationals/header.css
+++ b/Client/client/src/Components/Presentationals/header.css
@@ -54,4 +54,6 @@
 .header-stats-icon{
     background-image: url(../../assets/bars.svg);
 }
-
+.header-settings-icon{
+    background-image: url(../../assets/settings.svg);
+}
