--- a/Client/client/src/Base.css
+++ b/Client/client/src/Base.css
@@ -49,13 +49,12 @@ body{
     background-color: white;
     border-radius: 12px;
     box-shadow: 1px 1px 5px var(--secondary-color);
-    height: 400px;
-    width: 30%;
+    height:70%;
+    width: 40%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    padding: 50px;
+    padding:0 50px;
     -webkit-border-radius: 12px;
     -moz-border-radius: 12px;
     -ms-border-radius: 12px;
@@ -74,5 +73,10 @@ body{
     -o-transition: all .5s ease-in;
 }
 .login-form>*:nth-child(4){
-    margin-top: 40px;
+    margin-top: 5%;
+}
+
+img{
+    width: 100%;
+    max-height: 400px;
 }
