--- a/Client/client/src/Components/Presentationals/Form-Items/text-field.css
+++ b/Client/client/src/Components/Presentationals/Form-Items/text-field.css
@@ -18,6 +18,7 @@ input[type=number] {
 }
 
 .text-field-input,.date-input-input{
+    max-height: 50px;
     font-size: 1.1rem;
     height: 100%;
     border: 1px grey solid;
