fixed some bugs and updated the stats page

--- a/Client/client/src/Components/Presentationals/Charts/malade-pie.css
+++ b/Client/client/src/Components/Presentationals/Charts/malade-pie.css
@@ -27,7 +27,8 @@
     align-items: center;
     width: 30%;
 }
-.radio-btns>*{
+.radio-btns>div{
+    width: 10px;
     display: flex;
     margin:0 10px;
 }
