--- a/Client/client/src/Base.css
+++ b/Client/client/src/Base.css
@@ -15,6 +15,12 @@ body{
     background-color: var(--bg-color);
 }
 
+input[type='radio']{
+    min-width: 1em;
+    min-height: 1em;
+    margin-right: 4px;
+
+}
 .load{
     position: relative;
     top: 50%;
