--- a/Client/client/src/Components/Presentationals/Dialogs/malade-dlg.css
+++ b/Client/client/src/Components/Presentationals/Dialogs/malade-dlg.css
@@ -14,6 +14,9 @@
     width: 500px;
     left: 50%;
     top: 50%;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     transform: translate(-50%,-50%);
     -webkit-transform: translate(-50%,-50%);
     -moz-transform: translate(-50%,-50%);
