--- a/Client/client/src/pages/home.css
+++ b/Client/client/src/pages/home.css
@@ -1,5 +1,11 @@
 @import '../Base.css';
 
+.home{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+}
 .main-page{
     position: relative;
     height: 100vh;
@@ -8,7 +14,7 @@
     padding: 0;
     margin: 0 auto;
     max-width: 2400px;
-    min-width: 700px;
+    min-width: 100vw;
     max-height: 1400px;
 }
 
