--- a/Client/client/src/Base.css
+++ b/Client/client/src/Base.css
@@ -93,7 +93,16 @@ img {
 }
 
 .copyright {
+    font-size: .8rem;
     color: var(--secondary-color);
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
 }
 
 .copyright >span{
