Fixed scroll bug on modify form and styled the stats tables page

--- a/Client/client/src/Components/Presentationals/Forms/personal-form.css
+++ b/Client/client/src/Components/Presentationals/Forms/personal-form.css
@@ -3,6 +3,8 @@
     height: 100%;
     position: relative;
     padding: 3% 5% 0;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 
 .button-container{
