--- a/Client/client/src/Components/Presentationals/Dialogs/malade-dlg.css
+++ b/Client/client/src/Components/Presentationals/Dialogs/malade-dlg.css
@@ -3,7 +3,7 @@
 .photo-malade-container{
     height: 100vh;
     width: 100vw;
-    z-index: 10;
+    z-index: 1000;
     position: absolute;
     background-color: rgba(0, 0, 0, .5);
 }
@@ -11,7 +11,7 @@
     position: absolute;
     height: 80%;
     z-index: 11;
-    width: 500px;
+    /* width: 500px; */
     left: 50%;
     top: 50%;
     background-size: cover;
