--- a/Client/client/src/Components/Presentationals/Dialogs/malade-dlg.css
+++ b/Client/client/src/Components/Presentationals/Dialogs/malade-dlg.css
@@ -9,9 +9,9 @@
 }
 .photo-xl{
     position: absolute;
-    height: 80%;
+    height: auto;
     z-index: 11;
-    /* width: 500px; */
+    width: auto; 
     left: 50%;
     top: 50%;
     background-size: cover;
